DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Product_Service_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Product_Service_Ordered__c</fullName>
    <description>Pulls product/service ordered from Opportunity</description>
    <formula>Opportunity__r.Product_Service_Ordered__c</formula>
    <label>Product/Service Ordered</label>
    <type>Text</type>
</CustomField>