DigicielFull/force-app/main/default/objects/Service_Request__c/fields/ProductionSubType__c.field-meta.xml
<CustomField>
    <fullName>ProductionSubType__c</fullName>
    <label>Sous type de production</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ProductionType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Idlink</fullName>
            </value>
            <value>
                <fullName>ADSL/SDSL</fullName>
            </value>
            <value>
                <fullName>Sans-fil</fullName>
            </value>
            <value>
                <fullName>Routeur 4G</fullName>
            </value>
            <value>
                <fullName>Fibre FTTE</fullName>
            </value>
            <value>
                <fullName>Fibre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>