DigicielFull/force-app/main/default/objects/Service_Request__c/fields/ProjectManager__c.field-meta.xml
<CustomField>
    <fullName>ProjectManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Requests5</relationshipName>
    <type>Lookup</type>
</CustomField>