DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MNU / GNU</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Idom</fullName>
            </value>
            <value>
                <fullName>Collectivite St Barth</fullName>
            </value>
            <value>
                <fullName>MSR</fullName>
            </value>
            <value>
                <fullName>Dauphin Telecom</fullName>
            </value>
            <value>
                <fullName>Digicel</fullName>
            </value>
            <value>
                <fullName>DomSpot</fullName>
            </value>
            <value>
                <fullName>ZEOP</fullName>
            </value>
            <value>
                <fullName>Réunion THD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>