DigicielFull/force-app/main/default/objects/Service_Request__c/fields/PullingOfTheFiber__c.field-meta.xml
<CustomField>
    <fullName>PullingOfTheFiber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tirage FO Réalisé</label>
    <type>Checkbox</type>
</CustomField>