DigicielFull/force-app/main/default/objects/Service_Request__c/fields/PV_Status__c.field-meta.xml
<CustomField>
    <fullName>PV_Status__c</fullName>
    <label>PV Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To generate</fullName>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <isActive>false</isActive>
                <label>Draft</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>