DigicielFull/force-app/main/default/objects/Service_Request__c/fields/ReportTransmissionDate__c.field-meta.xml
<CustomField>
    <fullName>ReportTransmissionDate__c</fullName>
    <label>Qualification &amp; pose du bandeau</label>
    <type>Date</type>
</CustomField>