DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Sent__c.field-meta.xml
<CustomField>
    <fullName>Sent__c</fullName>
    <label>Sent on</label>
    <type>Date</type>
</CustomField>