DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Service_Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Details__c</fullName>
    <inlineHelpText>Please enter details of request here</inlineHelpText>
    <label>Service Request Details</label>
    <type>TextArea</type>
</CustomField>