DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Service_Request_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_On_Hold__c</fullName>
    <inlineHelpText>enter here the data required to enable this request to proceed</inlineHelpText>
    <label>Service Request On Hold</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>