DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Service_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Status__c</fullName>
    <label>Service Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>