DigicielFull/force-app/main/default/objects/Service_Request__c/fields/ServiceProducts__c.field-meta.xml
<CustomField>
    <fullName>ServiceProducts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Product</label>
    <referenceTo>ServiceProduct__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>