DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Speed_Profile__c.field-meta.xml
<CustomField>
    <fullName>Speed_Profile__c</fullName>
    <description>OSP INFORMATION</description>
    <label>Speed Profile</label>
    <length>55</length>
    <type>Text</type>
</CustomField>