DigicielFull/force-app/main/default/objects/Service_Request__c/fields/SR_AutoNum__c.field-meta.xml
<CustomField>
    <fullName>SR_AutoNum__c</fullName>
    <displayFormat>SR{00000}</displayFormat>
    <label>SR_AutoNum</label>
    <type>AutoNumber</type>
</CustomField>