DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Start_of_Trial_Period__c.field-meta.xml
<CustomField>
    <fullName>Start_of_Trial_Period__c</fullName>
    <label>Start of Trial Period</label>
    <type>Date</type>
</CustomField>