DigicielFull/force-app/main/default/objects/Service_Request__c/fields/STB_MAC_Addresses__c.field-meta.xml
<CustomField>
    <fullName>STB_MAC_Addresses__c</fullName>
    <description>OSP INFORMATION</description>
    <label>STB MAC Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>