DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Structure_ID__c.field-meta.xml
<CustomField>
    <fullName>Structure_ID__c</fullName>
    <label>Structure ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>