DigicielFull/force-app/main/default/objects/Service_Request__c/fields/SubStatus__c.field-meta.xml
<CustomField>
    <fullName>SubStatus__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commande rejetée</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>On hold by contractor</fullName>
            </value>
            <value>
                <fullName>On hold by customer</fullName>
            </value>
            <value>
                <fullName>Config OK</fullName>
            </value>
            <value>
                <fullName>Device delivered</fullName>
            </value>
            <value>
                <fullName>request to core</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Presales</fullName>
            </value>
            <value>
                <fullName>en attente commande</fullName>
            </value>
            <value>
                <fullName>request to sales</fullName>
            </value>
            <value>
                <fullName>request to presales</fullName>
            </value>
            <value>
                <fullName>request to customer</fullName>
            </value>
            <value>
                <fullName>not ready to install</fullName>
            </value>
            <value>
                <fullName>cust to cancel request</fullName>
            </value>
            <value>
                <fullName>UAT on hold</fullName>
            </value>
            <value>
                <fullName>UAT OK to be sent</fullName>
            </value>
            <value>
                <fullName>Device delivered</fullName>
                <isActive>false</isActive>
                <label>Device delivered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>