DigicielFull/force-app/main/default/objects/Service_Request__c/fields/SupervisionURL__c.field-meta.xml
<CustomField>
    <fullName>SupervisionURL__c</fullName>
    <label>URL de Supervision</label>
    <type>Url</type>
</CustomField>