DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Tech_EstDateChange__c.field-meta.xml
<CustomField>
    <fullName>Tech_EstDateChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_EstDateChange</label>
    <type>Checkbox</type>
</CustomField>