DigicielFull/force-app/main/default/objects/Service_Request__c/fields/TECH_NbDaysSubStatusHold__c.field-meta.xml
<CustomField>
    <fullName>TECH_NbDaysSubStatusHold__c</fullName>
    <formula>TECH_OnHoldSubstatusDate2__c -  TECH_OnHoldSubstatusDate1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_NbDaysSubStatusHold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>