DigicielFull/force-app/main/default/objects/Service_Request__c/fields/TECH_OnHoldStatusDate1__c.field-meta.xml
<CustomField>
    <fullName>TECH_OnHoldStatusDate1__c</fullName>
    <label>TECH_On hold status date 1</label>
    <type>Date</type>
</CustomField>