DigicielFull/force-app/main/default/objects/Service_Request__c/fields/TECH_OnHoldSubstatusDate1__c.field-meta.xml
<CustomField>
    <fullName>TECH_OnHoldSubstatusDate1__c</fullName>
    <label>TECH_On hold Substatus date 1</label>
    <type>Date</type>
</CustomField>