DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Technical_Status__c.field-meta.xml
<CustomField>
    <fullName>Technical_Status__c</fullName>
    <description>OSP INFORMATION</description>
    <label>Technical Status</label>
    <length>55</length>
    <type>Text</type>
</CustomField>