DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Term_Committed__c.field-meta.xml
<CustomField>
    <fullName>Term_Committed__c</fullName>
    <formula>TEXT(Opportunity__r.Contract_Term__c)</formula>
    <label>Term Committed</label>
    <type>Text</type>
</CustomField>