DigicielFull/force-app/main/default/objects/Service_Request__c/fields/TimeSpentOnHoldClient__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOnHoldClient__c</fullName>
    <label>Time spent on hold (Client)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>