DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Today_Est_installed_date__c.field-meta.xml
<CustomField>
    <fullName>Today_Est_installed_date__c</fullName>
    <formula>IF (Est_Scheduled_Date__c - TODAY() = 15, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est installed date - Today</label>
    <type>Checkbox</type>
</CustomField>