DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Trial_Required__c.field-meta.xml
<CustomField>
    <fullName>Trial_Required__c</fullName>
    <label>Trial Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>