DigicielFull/force-app/main/default/objects/Service_Request__c/fields/TV_Package__c.field-meta.xml
<CustomField>
    <fullName>TV_Package__c</fullName>
    <label>TV Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>