DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Unsuccessful__c.field-meta.xml
<CustomField>
    <fullName>Unsuccessful__c</fullName>
    <label>Unsuccessful</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Line of Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>