DigicielFull/force-app/main/default/objects/Service_Request__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opp Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>