DigicielFull/force-app/main/default/objects/Service_Request__c/fields/VPN_Bandwidth__c.field-meta.xml
<CustomField>
    <fullName>VPN_Bandwidth__c</fullName>
    <label>VPN Bandwidth</label>
    <length>180</length>
    <type>Text</type>
</CustomField>