DigicielFull/force-app/main/default/objects/Service_Request__c/recordTypes/Disconnection.recordType-meta.xml
<RecordType>
    <fullName>Disconnection</fullName>
    <active>true</active>
    <label>Disconnection</label>
</RecordType>