DigicielFull/force-app/main/default/objects/Service_Request__c/recordTypes/Group_SID_Pre_Sales_Support.recordType-meta.xml
<RecordType>
    <fullName>Group_SID_Pre_Sales_Support</fullName>
    <active>true</active>
    <label>Group SID - Pre Sales Support</label>
</RecordType>