DigicielFull/force-app/main/default/objects/Service_Request__c/recordTypes/Mobile_Activation.recordType-meta.xml
<RecordType>
    <fullName>Mobile_Activation</fullName>
    <active>true</active>
    <label>Mobile Activation</label>
</RecordType>