DigicielFull/force-app/main/default/objects/Service_Request__c/recordTypes/Survey.recordType-meta.xml
<RecordType>
    <fullName>Survey</fullName>
    <active>true</active>
    <label>Survey</label>
</RecordType>