DigicielFull/force-app/main/default/objects/Service_Request__c/recordTypes/WiMax_Survey_Install.recordType-meta.xml
<RecordType>
    <fullName>WiMax_Survey_Install</fullName>
    <active>false</active>
    <description>Used in Barbados for WiMax Survey and Install - Occurs on same date</description>
    <label>WiMax Survey/Install</label>
</RecordType>