DigicielFull/force-app/main/default/objects/Service_Request__c/validationRules/Must_select_Install_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_select_Install_Type</fullName>
    <active>false</active>
    <description>Ensures Install type is selected</description>
    <errorConditionFormula>ISPICKVAL( Status__c ,&quot;Requested&quot;) &amp;&amp; ISPICKVAL( Install_Type2__c , &quot;&quot; )</errorConditionFormula>
    <errorMessage>Must select an Install type</errorMessage>
</ValidationRule>