DigicielFull/force-app/main/default/objects/Service_Request__c/validationRules/Must_Update_Completed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Update_Completed_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL( Status__c , &quot;Complete&quot;), 
ISBLANK( Completed_Date__c ))</errorConditionFormula>
    <errorDisplayField>Completed_Date__c</errorDisplayField>
    <errorMessage>Opps You forgot to enter the Completed Date</errorMessage>
</ValidationRule>