DigicielFull/force-app/main/default/objects/Service_Request__c/validationRules/Must_Update_Completed_Date_on_Field_Srvy.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Update_Completed_Date_on_Field_Srvy</fullName>
    <active>true</active>
    <description>Must update completed date on field survey</description>
    <errorConditionFormula>AND( 
RecordType.Name = &quot;Field Survey&quot;, 
ISPICKVAL( Status__c , &quot;Complete&quot;), 
ISBLANK( Completed_Date__c ))</errorConditionFormula>
    <errorDisplayField>Completed_Date__c</errorDisplayField>
    <errorMessage>Completed Date must be updated on Field Survey if status is changing to Complete</errorMessage>
</ValidationRule>