DigicielFull/force-app/main/default/objects/Service_Request__c/validationRules/Start_of_Trial_Period_on_365_Tenant.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_of_Trial_Period_on_365_Tenant</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
RecordType.Name = &quot;Office 365 Tenant&quot;, 
ISPICKVAL( Status__c , &quot;In Trial&quot;), 
ISBLANK(Start_of_Trial_Period__c ))</errorConditionFormula>
    <errorMessage>You must enter the date that the trial has begun</errorMessage>
</ValidationRule>