DigicielFull/force-app/main/default/objects/Service_Request__c/listViews/ABC_Service_Request_Queue_Service_Request.listView-meta.xml
<ListView>
    <fullName>ABC_Service_Request_Queue_Service_Request</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Country__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Install_Completed_On__c</columns>
    <filterScope>Queue</filterScope>
    <label>ABC Service Request Queue</label>
    <language>en_US</language>
    <queue>ABC_Service_Request_Queue</queue>
    <sharedTo>
        <roleAndSubordinates>Aruba</roleAndSubordinates>
        <roleAndSubordinates>Bonaire</roleAndSubordinates>
        <roleAndSubordinates>Curacao</roleAndSubordinates>
    </sharedTo>
</ListView>