DigicielFull/force-app/main/default/objects/Service_Request__c/listViews/All_Delayed_Service_Requests.listView-meta.xml
<ListView>
    <fullName>All_Delayed_Service_Requests</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>RECORDTYPE</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_Request__c.Change_Request,Service_Request__c.Disconnection,Service_Request__c.Survey,Service_Request__c.Installation</value>
    </filters>
    <filters>
        <field>Delayed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Installed,Complete,Cancelled</value>
    </filters>
    <label>*All Delayed Service Requests</label>
</ListView>