DigicielFull/force-app/main/default/objects/Service_Request__c/listViews/All_Service_Requests.listView-meta.xml
<ListView>
    <fullName>All_Service_Requests</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>RECORDTYPE</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_Request__c.Change_Request,Service_Request__c.Disconnection,Service_Request__c.Survey,Service_Request__c.Installation</value>
    </filters>
    <label>*All Service Requests</label>
    <language>en_US</language>
</ListView>