DigicielFull/force-app/main/default/objects/Service_Request__c/listViews/Bermuda_Service_Request_Queue.listView-meta.xml
<ListView>
    <fullName>Bermuda_Service_Request_Queue</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Country__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Install_Completed_On__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Bermuda</value>
    </filters>
    <label>Bermuda Service Request Queue</label>
    <language>en_US</language>
    <queue>Bermuda_Service_Request_Queue</queue>
    <sharedTo>
        <roleAndSubordinates>Bermuda</roleAndSubordinates>
    </sharedTo>
</ListView>