DigicielFull/force-app/main/default/objects/Service_Request__c/listViews/El_Salvador_Service_Delivery_Team.listView-meta.xml
<ListView>
    <fullName>El_Salvador_Service_Delivery_Team</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Country__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Install_Completed_On__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>El Salvador</value>
    </filters>
    <label>El Salvador Service Delivery Team</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>El_Salvador</roleAndSubordinates>
    </sharedTo>
</ListView>