DigicielFull/force-app/main/default/objects/Service_Request__c/listViews/Group_Service_Delivery_Service_Request.listView-meta.xml
<ListView>
    <fullName>Group_Service_Delivery_Service_Request</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Country__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Est_Scheduled_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Group Service Delivery</label>
    <language>en_US</language>
    <queue>Group_Service_Delivery</queue>
    <sharedTo>
        <group>Group_Service_Delivery</group>
    </sharedTo>
</ListView>