DigicielFull/force-app/main/default/objects/Service_Request__c/listViews/Haiti_Service_Delivery_Queue.listView-meta.xml
<ListView>
    <fullName>Haiti_Service_Delivery_Queue</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <filterScope>Queue</filterScope>
    <label>Haiti Service Delivery Queue</label>
    <language>en_US</language>
    <queue>Haiti_Service_Request_Queue</queue>
    <sharedTo>
        <group>Haiti_Read_Write_All_Access_Sharing</group>
        <roleAndSubordinates>Haiti</roleAndSubordinates>
    </sharedTo>
</ListView>