DigicielFull/force-app/main/default/objects/Service_Request__c/listViews/ICT_Barbados_Service_Request_with_Core_T.listView-meta.xml
<ListView>
    <fullName>ICT_Barbados_Service_Request_with_Core_T</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>With Core Technical</value>
    </filters>
    <filters>
        <field>Opportunity__c</field>
        <operation>contains</operation>
        <value>BB-</value>
    </filters>
    <label>ICT Barbados Service Request with Core T</label>
    <sharedTo>
        <group>Barbados_ICT_Admin_Team</group>
        <group>ICT_Barbados_Account_Managers_All</group>
        <group>ICT_Barbados_Sales_Managers</group>
        <group>ICT_Barbados_Technical</group>
        <group>Timba_Surveys_Barbados</group>
    </sharedTo>
</ListView>